counter.yml
apiVersion: v1
kind: Pod
metadata:
  name: counter
  namespace: scbs-local-dev
spec:
  containers:
  - name: count
    image: busybox
    args: [/bin/sh, -c,
            'i=0; while true; do echo "$i: $(date)" >> /var/log/count-out.log ; i=$((i+1)); sleep 1; done']
  - name: filebeat
    image:
