ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scbs-ingress
  namespace: scbs-local-dev
  # annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/redis"
        backend:
          service:
            name: redis-manager
            port:
              number: 8081
      - pathType: Prefix
        path: "/kibana"
        backend:
          service:
            name: kibana
            port:
              number: 5601
